src/test/resources/semantic_errors/while_string_is_true.notc
void main() {
    string s = "dlklkjd";
    while (s == true) {
    }
}
